# send_vrc_desktop

./: Cargo.toml  README.md  renovate.json
.cargo/: audit.toml
.github/actions/cargo-cache/: action.yml
.github/workflows/: actionlint.yml  audit.yml  build.yml  clippy.yml  format.yml  release.yml
src/: error.rs  handle.rs  main.rs  router.rs  server.rs  win32api.rs
src/server/: handle.rs  handler.rs  mod.rs  router.rs
src/win32api/: input.rs  window.rs
