[package]
name = "send_vrc_desktop"
version = "1.0.6"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
time = { version = "0.3.34", features = ["local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
clipboard-win = "5.3.0"
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
