[package]
name = "send_vrc_desktop"
version = "1.0.6"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.82"
axum = "0.8.0"
time = { version = "0.3.36", features = ["local-offset"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
clipboard-win = "5.3.1"
windows = { version = "0.57.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
